testsuite/tests/parser/should_fail/pfail039.alan
hello() : proc
{
  if((true)
    return;
}
