testsuite/tests/parser/should_fail/pfail039.stderr
pfail039.alan:4:5: Error: Parse error on input `return'
	Probably missing `)'

